--- a/journals/10-lime_hamby_variability/10-lime_hamby_variability.Rmd
+++ b/journals/10-lime_hamby_variability/10-lime_hamby_variability.Rmd
@@ -11,6 +11,335 @@ output:
     highlight: textmate
 ---
 
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(
+  echo = TRUE,
+  message = FALSE,
+  warning = FALSE,
+  eval = TRUE,
+  cache = FALSE
+)
+```
+
+We have finally identified the data that was most likely used to train `rtrees` (`CCFs_withlands`). This data is different from the one we previously believed to be the one that trained `rtrees` (`hamby_comparisons`; previously called `features-hamby173and252.csv`). It is of interest to keep a record of how the LIME explanations on a testing dataset (Hamby 224 sets 1 and 11) vary across the various training datasets and models. This journal applies LIME to various versions of a random forest trained on the Hamby bullet signature comparisons data.
+
+```{r}
+library(dplyr)
+library(forcats)
+library(ggplot2)
+library(gretchenalbrecht)
+library(limeaid)
+```
+
+# Data
+
+Load the filtered version of the `hamby_comparisons` data: 
+  - LEAs with tank rash in Eric's paper filtered out
+  - Contains same number of rows as `rtrees`
+  - Prepared in journal [09-identifying-rtrees-training-data.Rmd](https://goodekat.github.io/LIME-research-journals/journals/09-identifying-rtrees-training-data/09-identifying-rtrees-training-data.html)
+
+```{r}
+hamby_comparisons_filtered <- read.csv("../../../data/hamby_comparisons_filtered.csv")
+```
+
+Load the cleaned version of the `CCFs_withlands` data (prepared in [09-identifying-rtrees-training-data.Rmd](https://goodekat.github.io/LIME-research-journals/journals/09-identifying-rtrees-training-data/09-identifying-rtrees-training-data.html)):
+
+```{r}
+CCFs_withlands_clean <- read.csv("../../../data/CCFs_withlands_clean.csv")
+```
+
+Load the bullet testing data using in the LIME diagnostics paper (prepared in https://github.com/goodekat/LIME-diagnostics-paper/blob/master/code/01-raw-file-compression.Rmd):
+
+```{r}
+bullet_test <- read.csv("../../../diagnostics-paper/data/bullet-test.csv")
+```
+
+Obtain the features used to train `rtrees` for use throughout this journal:
+
+```{r}
+rtrees_features <- rownames(bulletxtrctr::rtrees$importance)
+```
+
+# Apply LIME
+
+## rtrees with hamby_comparisons
+
+Wrong training data for `rtrees`
+
+```{r}
+# Create a file path
+file_rtrees_hc_explanations = "../../../data/rtrees_explanations_hc.rds"
+
+# Implement and save or load LIME explanations
+if (!file.exists(file_rtrees_hc_explanations)) {
+  
+  # Apply LIME
+  rtrees_hc_explanations <- apply_lime(
+    train = hamby_comparisons_filtered %>% select(all_of(rtrees_features)),
+    test = bullet_test %>% select(all_of(rtrees_features)),
+    model = bulletxtrctr::rtrees,
+    label = as.character(TRUE),
+    n_features = 3,
+    sim_method = c('quantile_bins', 'equal_bins',
+                   'kernel_density', 'normal_approx'),
+    nbins = 2:6,
+    feature_select = "auto",
+    dist_fun = "gower",
+    kernel_width = NULL,
+    gower_pow = c(0.5, 1, 10),
+    return_perms = FALSE,
+    all_fs = FALSE,
+    seed = 20190914)
+
+  # Save the explanations
+  saveRDS(object = rtrees_hc_explanations, file = file_rtrees_hc_explanations)
+  
+} else {
+
+  # Load the explanations
+  rtrees_hc_explanations <- readRDS(file_rtrees_hc_explanations)
+
+}
+```
+
+## rtrees with CCFs_withlands
+
+Probably the training data for `rtrees`
+
+```{r}
+# Create a file path
+file_rtrees_ccfwl_explanations = "../../../data/rtrees_explanations_ccfwl.rds"
+
+# Implement and save or load LIME explanations
+if (!file.exists(file_rtrees_ccfwl_explanations)) {
+  
+  # Apply LIME
+  rtrees_ccfwl_explanations <- apply_lime(
+    train = CCFs_withlands_clean %>% select(all_of(rtrees_features)),
+    test = bullet_test %>% select(all_of(rtrees_features)),
+    model = bulletxtrctr::rtrees,
+    label = as.character(TRUE),
+    n_features = 3,
+    sim_method = c('quantile_bins', 'equal_bins',
+                   'kernel_density', 'normal_approx'),
+    nbins = 2:6,
+    feature_select = "auto",
+    dist_fun = "gower",
+    kernel_width = NULL,
+    gower_pow = c(0.5, 1, 10),
+    return_perms = FALSE,
+    all_fs = FALSE,
+    seed = 20190914)
+
+  # Save the explanations
+  saveRDS(object = rtrees_ccfwl_explanations, file = file_rtrees_ccfwl_explanations)
+  
+} else {
+
+  # Load the explanations
+  rtrees_ccfwl_explanations <- readRDS(file_rtrees_ccfwl_explanations)
+
+}
+```
+
+## New RF with CCFs_withlands
+
+Using the data that was probably used to train `rtrees` to train a new random forest (see the [Rnw of the LIME diagnostics paper](https://github.com/goodekat/LIME-diagnostics-paper/blob/master/paper.Rnw) for the code):
+
+```{r}
+bullet_explain <- readRDS("../../../diagnostics-paper/data/bullet-explain.rds")
+```
+
+# Feature Heatmaps
+
+## rtrees with hamby_comparisons
+
+```{r fig.width = 12, fig.height = 12}
+# Create a feature heatmap
+plot_feature_heatmap(
+  rtrees_hc_explanations$explain %>%
+    mutate(
+      label = as.factor(label),
+      feature = fct_recode(
+        feature,
+        "Rough Correlation" = "rough_cor",
+        "Consecutively Matching Striae" = "cms",
+        "Distance" = "D",
+        "Matches" = "matches",
+        "Mismatches" = "mismatches",
+        "Non-Consecutively Matching Striae" = "non_cms",
+        "Cross Correlation Function" = "ccf",
+        "Sum of Peaks" = "sum_peaks",
+        "Distance Standard Deviation" = "sd_D"
+      )
+    ),
+  facet_var = bullet_test %>%
+    mutate(samesource = fct_recode(
+      factor(samesource),
+      "Match" = "TRUE",
+      "Non-Match" = "FALSE"
+    )) %>%
+    pull(samesource),
+  order_method = "PCA"
+) +
+  scale_fill_gretchenalbrecht(palette = "last_rays", discrete = TRUE) +
+  scale_color_gretchenalbrecht(palette = "last_rays",
+                               discrete = TRUE,
+                               reverse = TRUE) +
+  theme_bw() +
+  theme(
+    axis.text.y = element_blank(),
+    axis.ticks.y = element_blank(),
+    strip.background = element_rect(color = "white", fill = "white"),
+    strip.text.y.right = element_text(angle = 0),
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
+  guides(fill = guide_legend(nrow = 3)) +
+  labs(y = "Case", color = "Complex Model Feature", fill = "Complex Model Feature")
+```
+
+## rtrees with CCFs_withlands
+
+```{r fig.width = 12, fig.height = 12}
+# Create a feature heatmap
+plot_feature_heatmap(
+  rtrees_ccfwl_explanations$explain %>%
+    mutate(
+      label = as.factor(label),
+      feature = fct_recode(
+        feature,
+        "Rough Correlation" = "rough_cor",
+        "Consecutively Matching Striae" = "cms",
+        "Distance" = "D",
+        "Matches" = "matches",
+        "Mismatches" = "mismatches",
+        "Non-Consecutively Matching Striae" = "non_cms",
+        "Cross Correlation Function" = "ccf",
+        "Sum of Peaks" = "sum_peaks",
+        "Distance Standard Deviation" = "sd_D"
+      )
+    ),
+  facet_var = bullet_test %>%
+    mutate(samesource = fct_recode(
+      factor(samesource),
+      "Match" = "TRUE",
+      "Non-Match" = "FALSE"
+    )) %>%
+    pull(samesource),
+  order_method = "PCA"
+) +
+  scale_fill_gretchenalbrecht(palette = "last_rays", discrete = TRUE) +
+  scale_color_gretchenalbrecht(palette = "last_rays",
+                               discrete = TRUE,
+                               reverse = TRUE) +
+  theme_bw() +
+  theme(
+    axis.text.y = element_blank(),
+    axis.ticks.y = element_blank(),
+    strip.background = element_rect(color = "white", fill = "white"),
+    strip.text.y.right = element_text(angle = 0),
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
+  guides(fill = guide_legend(nrow = 3)) +
+  labs(y = "Case", color = "Complex Model Feature", fill = "Complex Model Feature")
+```
+
+## New RF with CCFs_withlands
+
+```{r fig.width = 12, fig.height = 12}
+# Create a feature heatmap
+plot_feature_heatmap(
+  bullet_explain %>%
+    mutate(
+      label = as.factor(label),
+      feature = fct_recode(
+        feature,
+        "Rough Correlation" = "rough_cor",
+        "Consecutively Matching Striae" = "cms",
+        "Distance" = "D",
+        "Matches" = "matches",
+        "Mismatches" = "mismatches",
+        "Non-Consecutively Matching Striae" = "non_cms",
+        "Cross Correlation Function" = "ccf",
+        "Sum of Peaks" = "sum_peaks",
+        "Distance Standard Deviation" = "sd_D"
+      )
+    ),
+  facet_var = bullet_test %>%
+    mutate(samesource = fct_recode(
+      factor(samesource),
+      "Match" = "TRUE",
+      "Non-Match" = "FALSE"
+    )) %>%
+    pull(samesource),
+  order_method = "PCA"
+) +
+  scale_fill_gretchenalbrecht(palette = "last_rays", discrete = TRUE) +
+  scale_color_gretchenalbrecht(palette = "last_rays",
+                               discrete = TRUE,
+                               reverse = TRUE) +
+  theme_bw() +
+  theme(
+    axis.text.y = element_blank(),
+    axis.ticks.y = element_blank(),
+    strip.background = element_rect(color = "white", fill = "white"),
+    strip.text.y.right = element_text(angle = 0),
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  ) +
+  guides(fill = guide_legend(nrow = 3)) +
+  labs(y = "Case", color = "Complex Model Feature", fill = "Complex Model Feature")
+```
+
+# Assessment Metric Plots
+
+## rtrees with hamby_comparisons
+
+```{r}
+plot_metrics(
+  rtrees_hc_explanations$explain %>% mutate(label = as.factor(label)),
+  add_lines = TRUE,
+  line_alpha = 0.75
+) +
+  theme_bw() +
+  theme(
+    strip.background = element_rect(color = "white", fill = "white"),
+    strip.placement = "outside"
+  )
+```
+
+## rtrees with CCFs_withlands
+
+```{r}
+plot_metrics(
+  rtrees_ccfwl_explanations$explain %>% mutate(label = as.factor(label)),
+  add_lines = TRUE,
+  line_alpha = 0.75
+) +
+  theme_bw() +
+  theme(
+    strip.background = element_rect(color = "white", fill = "white"),
+    strip.placement = "outside"
+  )
+```
+
+## New RF with CCFs_withlands
+
+```{r}
+plot_metrics(
+  bullet_explain %>% mutate(label = as.factor(label)),
+  add_lines = TRUE,
+  line_alpha = 0.75
+) +
+  theme_bw() +
+  theme(
+    strip.background = element_rect(color = "white", fill = "white"),
+    strip.placement = "outside"
+  )
+```
+
 # Session Info
 
 ```{r}
