--- a/README.Rmd
+++ b/README.Rmd
@@ -26,21 +26,21 @@ Repository for research journals for my research projects related to LIME. See b
 
 Descriptions of the materials in this repository are listed below.
 
-[**code**](code/)
+#### [**code**](code/)
 
 Place for storing R code used in the research journals:
 
 - [app.R](code/app.R): code for the Shiny app for visualizing the LIME explanations associated with the bullet land comparisons
 - [helper_functions.R](code/helper_functions.R): R script with functions that I use in the journals
   
-[**figures**](figures)
+#### [**figures**](figures)
 
 Contains static images:
 
 - [laugel-lime-concept.png](figures/laugel-lime-concept.png) and [laugel-locality-metric](figures/laugel-locality-metric.png): figures from the Laugel et al. (2018) paper
 - [python-ridge1](figures/python-ridge1.png), [python-ridge2](figures/python-ridge2.png), and [python-ridge3](figures/python-ridge3.png): screen shots of the python LIME package showing the use of a ridge regression as the explainer
 
-[**journals**](journals)
+#### [**journals**](journals)
 
 Contains folders with research journals:
 
@@ -58,11 +58,11 @@ Contains folders with research journals:
 
 *** **Note**: We have realized that the training dataset for the `rtrees` model is not the one used in these files. See [09-identifying_rtrees_training_data](journals/09-identifying_rtrees_training_data) for more details on the correct dataset. The correct data is used in the LIME diagnostics paper. For time reasons, the results in these journals have not been updated.
 
-[**old-journals**](old-journals)
+#### [**old-journals**](old-journals)
 
 Contains materials from my earliest research journals relating to the LIME project. It is likely that the code in these files will not run. However, the knit versions of the R markdown documents may still be useful, so I included them in the repository.
 
-**main**
+#### **main**
 
 Files contained in the main folder of the repository:
 
