final clean up before making repo public

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # LIME Research <img align="right" height="200" src="https://i.pinimg.com/originals/de/18/33/de18338e3313edd97d8156d987244e74.jpg">
 
-Repository for research journals for my research projects related to LIME. See below for descriptions of the contents of this repository. For easy viewing of the journals, use these links: 
+Repository for research journals for my research projects related to LIME. See below for descriptions of the contents of this repository. Beware of typos in the journals. Not all of them have been proof read. For easy viewing of the journals, use these links: 
 
 0. [Objectives and Ideas](https://goodekat.github.io/LIME-research-journals/journals/00-objectives_and_ideas/00-objectives_and_ideas.html)
 1. [Information on Hamby Data and Models](https://goodekat.github.io/LIME-research-journals/journals/01-hamby_data_and_models/01-hamby_data_and_models.html)
